modules/arm-template/azure-arm/og-arm.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
      "ftdOSVersion": {
        "type": "string",
        "defaultValue": "FTDv-7.6.0",
        "allowedValues": [
          "FTDv-7.6.0"
        ],
        "metadata": {
          "description": "The FTDv version for the VM. This will pick a fully patched image of this given FTDv version."
        }
      },
       "vmName": {
          "type": "string",
          "defaultValue": "csf-vm",
          "metadata": {
             "description": "Name of the CSF-TDv Virtual Machine."
          }
       },
       "adminUsername": {
          "type": "string",
          "defaultValue": "",
          "metadata": {
             "description": "Username for the Virtual Machine. admin, Administrator among other values are disallowed - see Azure docs"
          }
       },
       "adminPassword": {
          "type": "securestring",
          "defaultValue": "",
          "metadata": {
             "description": "Password for the Virtual Machine. Passwords must be 12 to 72 chars and have at least 3 of the following: Lowercase, uppercase, numbers, special chars"
          }
       },
       "availabilityZone": {
           "type": "int",
           "defaultValue": 0,
           "minValue": 0,
           "maxValue": 3,
           "metadata": {
               "description": "Specify the availability zone for deployment. Ensure that selected region supports availability zones and value provided is correct. Set to 0 if you do not want to use Availability Zones"
           }
       },
       "customData": {
          "type": "string",
          "defaultValue": "{\"AdminPassword\": \"Password@2023\",\"Hostname\": \"cisco-tdv\", \"ManageLocally\":\"No\"}",
          "metadata": {
             "description": "Custom Data (Day 0 config) passed to the CSF-TDv."
          }
       },
       "virtualNetworkResourceGroup": {
          "type": "string",
          "defaultValue": "arm-ftdv-rg",
          "metadata": {
             "description": "Name of the virtual network's Resource Group"
          }
       },
       "virtualNetworkName": {
          "type": "string",
          "defaultValue": "",
          "metadata": {
             "description": "Name of the virtual network"
          }
       },
       "mgmtSubnetName": {
          "type": "string",
          "defaultValue": "",
          "metadata": {
             "description": "The CSF-TDv management interface will attach to this subnet"
          }
       },
       "mgmtSubnetIP": {
          "type": "string",
          "defaultValue": "",
          "metadata": {
             "description": " IP on the mgmt interface (example: 192.168.0.10)"
          }
       },
       "hostMgmtSubnetIP": {
         "type": "string",
         "defaultValue": "",
         "metadata": {
            "description": "IP on the mgmt interface of the outside machine"
         }
       },
       "diagSubnetName": {
          "type": "string",
          "defaultValue": "",
          "metadata": {
             "description": "The CSF-TDv diagnostic0/0 interface will attach to this subnet"
          }
       },
       "diagSubnetIP": {
          "type": "string",
          "defaultValue": "",
          "metadata": {
             "description": "CSF-TDv IP on the diag interface (example: 192.168.1.10)"
          }
       },
       "data1SubnetName": {
          "type": "string",
          "defaultValue": "",
          "metadata": {
             "description": "The CSF-TDv data1 interface will attach to this subnet"
          }
       },
       "data1SubnetIP": {
          "type": "string",
          "defaultValue": "",
          "metadata": {
             "description": "The IP on the data1 interface (example: 192.168.2.10)"
          }
       },
       "data1SubnetIP2": {
            "type": "string",
            "defaultValue": "",
            "metadata": {
               "description": "The IP on the data1 interface (example: 192.168.2.10)"
            }
       },
       "data2SubnetName": {
          "type": "string",
          "defaultValue": "",
          "metadata": {
             "description": "The CSF-TDv data2 interface will attach to this subnet"
          }
       },
       "data2SubnetIP": {
          "type": "string",
          "defaultValue": "",
          "metadata": {
             "description": "The IP on the data2 interface (example: 192.168.3.10)"
          }
       },
       "data2SubnetIP2": {
          "type": "string",
          "defaultValue": "",
          "metadata": {
             "description": "The IP on the data2 interface (example: 192.168.3.10)"
          }
       },
       "vmSize": {
          "type": "string",
          "defaultValue": "Standard_D3_v2",
          "allowedValues": [
             "Standard_D2s_v3",
             "Standard_D3",
             "Standard_D3_v2",
             "Standard_D4_v2",
             "Standard_D5_v2",
             "Standard_D8s_v3",
             "Standard_D16s_v3",
             "Standard_F8s_v2",
             "Standard_F16s_v2"
          ],
          "metadata": {
             "description": "CSF-TDv VM Size."
          }
       },
       "vmHostSize": {
          "type": "string",
          "defaultValue": "Standard_D4s_v3",
          "allowedValues": [
             "Standard_D2s_v3",
             "Standard_D3",
             "Standard_D3_v2",
             "Standard_D4_v2",
             "Standard_D4s_v3",
             "Standard_D5_v2",
             "Standard_D8s_v3",
             "Standard_D16s_v3",
             "Standard_F8s_v2",
             "Standard_F16s_v2"
          ],
          "metadata": {
             "description": "CSF-TDv VM Size."
          }
       },
       "insideMachine": {
         "type": "string",
         "defaultValue": "teande-inside-machine"
       },
       "outsideMachine": {
         "type": "string",
         "defaultValue": "teande-outside-machine"
       },
       "ubuntuOSVersion": {
         "type": "string",
         "defaultValue": "Ubuntu-20.04-LTS"
       },
       "location": {
         "type": "string",
         "defaultValue": "[resourceGroup().location]",
         "metadata": {
           "description": "Location for all resources."
         }
       }
    },
    "variables": {
       "subnet1Ref": "[resourceId(parameters('virtualNetworkResourceGroup'), 'Microsoft.Network/virtualNetworks/subnets/', parameters('virtualNetworkName'), parameters('mgmtSubnetName'))]",
       "subnet2Ref": "[resourceId(parameters('virtualNetworkResourceGroup'), 'Microsoft.Network/virtualNetworks/subnets/', parameters('virtualNetworkName'), parameters('diagSubnetName'))]",
       "subnet3Ref": "[resourceId(parameters('virtualNetworkResourceGroup'), 'Microsoft.Network/virtualNetworks/subnets/', parameters('virtualNetworkName'), parameters('data1SubnetName'))]",
       "subnet4Ref": "[resourceId(parameters('virtualNetworkResourceGroup'), 'Microsoft.Network/virtualNetworks/subnets/', parameters('virtualNetworkName'), parameters('data2SubnetName'))]",
       "vmNic0Name": "[concat(parameters('vmName'),'-nic0')]",
       "vmNic1Name": "[concat(parameters('vmName'),'-nic1')]",
       "vmNic2Name": "[concat(parameters('vmName'),'-nic2')]",
       "vmNic3Name": "[concat(parameters('vmName'),'-nic3')]",
       "vmNic4Name": "[concat(parameters('vmName'),'-nic4')]",
       "vmNic5Name": "[concat(parameters('vmName'),'-nic5')]",
       "vmNic6Name": "[concat(parameters('vmName'),'-nic6')]",
       "osDiskType": "Standard_LRS",
       "mgtNsgName": "[concat(parameters('vmName'),'-SSH-SecurityGroup')]",
       "dataNsgName": "[concat(parameters('vmName'),'-Data-Net-SecurityGroup')]",
       "vmMgmtPublicIPAddressName": "[concat(parameters('vmName'),'nic0-ip')]",
       "vmMgmtPublicIPAddressType": "Static",
       "vmMgmtPublicIPAddressDnsName": "[variables('vmMgmtPublicIPAddressName')]",
       "hostOutsidePublicIPAddressName": "[concat(parameters('vmName'),'nic5-ip')]",
       "hostOutsidePublicIPAddressType": "Static",
       "hostOutsidePublicIPAddressDnsName": "[variables('hostOutsidePublicIPAddressName')]",
       "selectedAvailZone":"[if(equals(parameters('availabilityZone'), 0), json('null'), array(parameters('availabilityZone')))]",
       "pipSku": "Standard",
       "imageReference": {
        "FTDv-7.6.0": {
          "publisher": "cisco",
          "offer": "cisco-ftdv",
          "sku": "ftdv-azure-byol",
          "version": "760113.0.0"
        },
        "Ubuntu-20.04-LTS": {
            "publisher": "Canonical",
            "offer": "0001-com-ubuntu-server-jammy",
            "sku": "22_04-lts-gen2",
            "version": "latest"
        }
      }
    },
    "resources": [
       {
         "apiVersion": "2023-06-01",
         "type": "Microsoft.Network/virtualNetworks",
         "name": "[parameters('virtualNetworkName')]",
         "location": "[parameters('location')]",
         "properties":  {
            "addressSpace": {
              "addressPrefixes": [
                "10.4.0.0/16"
              ]
            },
            "subnets": [
              {
                "name": "[parameters('mgmtSubnetName')]",
                "properties": {
                  "addressPrefix": "10.4.0.0/24"
                }
              },
              {
                "name": "[parameters('diagSubnetName')]",
                "properties": {
                  "addressPrefix": "10.4.1.0/24"
                }
              },
              {
                "name": "[parameters('data1SubnetName')]",
                "properties": {
                  "addressPrefix": "10.4.2.0/24"
                }
              },
              {
                "name": "[parameters('data2SubnetName')]",
                "properties": {
                  "addressPrefix": "10.4.3.0/24"
                }
              }
            ]
          }
       },
       {
         "type": "Microsoft.Network/routeTables",
         "apiVersion": "2020-06-01",
         "name": "outsideVMRouteTable",
         "location": "[parameters('location')]",
         "properties": {
           "routes": [
             {
               "name": "defaultRouteToFTD",
               "properties": {
                 "addressPrefix": "0.0.0.0/0",
                 "nextHopType": "VirtualAppliance",
                 "nextHopIpAddress": "[parameters('data1SubnetIP')]"
               }
             }
           ]
         }
       },
       {
         "type": "Microsoft.Network/virtualNetworks/subnets",
         "apiVersion": "2020-06-01",
         "name": "[concat(parameters('virtualNetworkName'), '/', parameters('data1SubnetName'))]",
         "dependsOn": [
           "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]",
           "[resourceId('Microsoft.Network/routeTables', 'outsideVMRouteTable')]"
         ],
         "properties": {
           "addressPrefix": "10.4.2.0/24",
           "routeTable": {
             "id": "[resourceId('Microsoft.Network/routeTables', 'outsideVMRouteTable')]"
           }
         }
       },
       {
         "type": "Microsoft.Network/routeTables",
         "apiVersion": "2020-06-01",
         "name": "insideVMRouteTable",
         "location": "[parameters('location')]",
         "dependsOn": [
            "[resourceId('Microsoft.Network/routeTables', 'outsideVMRouteTable')]"
         ],
         "properties": {
           "routes": [
             {
               "name": "defaultRouteToFTD",
               "properties": {
                 "addressPrefix": "0.0.0.0/0",
                 "nextHopType": "VirtualAppliance",
                 "nextHopIpAddress": "[parameters('data2SubnetIP')]"
               }
             }
           ]
         }
       },
       {
         "type": "Microsoft.Network/virtualNetworks/subnets",
         "apiVersion": "2020-06-01",
         "name": "[concat(parameters('virtualNetworkName'), '/', parameters('data2SubnetName'))]",
         "dependsOn": [
           "[variables('subnet3Ref')]",
           "[resourceId('Microsoft.Network/routeTables', 'insideVMRouteTable')]"
         ],
         "properties": {
           "addressPrefix": "10.4.3.0/24",
           "routeTable": {
             "id": "[resourceId('Microsoft.Network/routeTables', 'insideVMRouteTable')]"
           }
         }
       },
       {
          "apiVersion": "2023-06-01",
          "type": "Microsoft.Network/publicIPAddresses",
          "name": "[variables('vmMgmtPublicIPAddressName')]",
          "location": "[parameters('location')]",
          "sku": {
              "name": "[variables('pipSku')]"
          },
          "properties": {
             "publicIPAllocationMethod": "[variables('vmMgmtPublicIpAddressType')]",
             "dnsSettings": {
                "domainNameLabel": "[variables('vmMgmtPublicIPAddressDnsName')]"
             }
          },
          "zones": "[variables('selectedAvailZone')]"
       },
       {
         "apiVersion": "2023-06-01",
         "type": "Microsoft.Network/publicIPAddresses",
         "name": "[variables('hostOutsidePublicIPAddressName')]",
         "location": "[parameters('location')]",
         "sku": {
             "name": "[variables('pipSku')]"
         },
         "properties": {
            "publicIPAllocationMethod": "[variables('hostOutsidePublicIpAddressType')]",
            "dnsSettings": {
               "domainNameLabel": "[variables('hostOutsidePublicIPAddressDnsName')]"
            }
         },
         "zones": "[variables('selectedAvailZone')]"
       },
       {
          "apiVersion": "2022-07-01",
          "type": "Microsoft.Network/networkSecurityGroups",
          "name": "[variables('mgtNsgName')]",
          "location": "[parameters('location')]",
          "properties": {
             "securityRules": [
                {
                   "name": "SSH-Rule",
                   "properties": {
                      "description": "Allow SSH",
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "22",
                      "sourceAddressPrefix": "151.186.192.0/20",
                      "destinationAddressPrefix": "*",
                      "access": "Allow",
                      "priority": 100,
                      "direction": "Inbound"
                   }
                },
                {
                   "name": "SFtunnel-Rule",
                   "properties": {
                      "description": "Allow tcp 8305",
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "8305",
                      "sourceAddressPrefix": "72.163.220.0/24",
                      "destinationAddressPrefix": "*",
                      "access": "Allow",
                      "priority": 101,
                      "direction": "Inbound"
                   }
                },
                {
                   "name": "HTTPs-Rule",
                   "properties": {
                         "description": "Allow HTTPs (TCP 443) for FDM UI access",
                         "protocol": "Tcp",
                         "sourcePortRange": "*",
                         "destinationPortRange": "443",
                         "sourceAddressPrefix": "72.163.220.0/24",
                         "destinationAddressPrefix": "*",
                         "access": "Allow",
                         "priority": 102,
                         "direction": "Inbound"
                   }
                }
             ]
          }
       },
       {
          "apiVersion": "2022-07-01",
          "type": "Microsoft.Network/networkSecurityGroups",
          "name": "[variables('dataNsgName')]",
          "location": "[parameters('location')]",
          "properties": {
                "securityRules": [
                   {
                      "name": "UDP-Rule1",
                      "properties": {
                            "description": "Allow UDP",
                            "protocol": "Udp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "500",
                            "sourceAddressPrefix": "72.163.220.0/24",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Inbound"
                      }
                   },
                   {
                      "name": "UDP-Rule2",
                      "properties": {
                            "description": "Allow UDP",
                            "protocol": "Udp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "4500",
                            "sourceAddressPrefix": "72.163.220.0/24",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 130,
                            "direction": "Inbound"
                      }
                   },
                   {
                     "name": "Allow-outside-Rule",
                     "properties": {
                           "description": "Allow OUTSIDE",
                           "protocol": "Tcp",
                           "sourcePortRange": "*",
                           "destinationPortRange": "*",
                           "sourceAddressPrefix": "10.4.0.0/16",
                           "destinationAddressPrefix": "*",
                           "access": "Allow",
                           "priority": 110,
                           "direction": "Inbound"
                     }
                   }
                ]
          }
       },
       {
          "apiVersion": "2023-06-01",
          "type": "Microsoft.Network/networkInterfaces",
          "name": "[variables('vmNic0Name')]",
          "location": "[parameters('location')]",
          "dependsOn": [
             "[resourceId('Microsoft.Network/networkSecurityGroups',variables('mgtNsgName'))]",
             "[resourceId('Microsoft.Network/virtualNetworks',parameters('virtualNetworkName'))]",
             "[resourceId('Microsoft.Network/publicIPAddresses', variables('vmMgmtPublicIPAddressName'))]"
          ],
          "properties": {
             "ipConfigurations": [
                {
                   "name": "ipconfig1",
                   "properties": {
                      "privateIPAllocationMethod": "Static",
                      "privateIPAddress": "[parameters('mgmtSubnetIP')]",
                      "subnet": {
                         "id": "[variables('subnet1Ref')]"
                      },
                      "publicIPAddress": {
                         "id": "[resourceId('Microsoft.Network/publicIPAddresses/', variables('vmMgmtPublicIPAddressName'))]"
                      }
                   }
                }
             ],
             "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('mgtNsgName'))]"
             },
             "enableAcceleratedNetworking": false,
             "enableIPForwarding": true
          }
       },
       {
          "apiVersion": "2023-06-01",
          "type": "Microsoft.Network/networkInterfaces",
          "name": "[variables('vmNic1Name')]",
          "location": "[parameters('location')]",
          "dependsOn": [
             "[resourceId('Microsoft.Network/networkSecurityGroups',variables('dataNsgName'))]",
             "[resourceId('Microsoft.Network/virtualNetworks',parameters('virtualNetworkName'))]"
          ],
          "properties": {
             "ipConfigurations": [
                {
                   "name": "ipconfig1",
                   "properties": {
                      "privateIPAllocationMethod": "Static",
                      "privateIPAddress": "[parameters('diagSubnetIP')]",
                      "subnet": {
                         "id": "[variables('subnet2Ref')]"
                      }
                   }
                }
             ],
             "enableAcceleratedNetworking": false,
             "enableIPForwarding": true
          }
       },
       {
          "apiVersion": "2023-06-01",
          "type": "Microsoft.Network/networkInterfaces",
          "name": "[variables('vmNic2Name')]",
          "location": "[parameters('location')]",
          "dependsOn": [
             "[resourceId('Microsoft.Network/virtualNetworks',parameters('virtualNetworkName'))]",
             "[resourceId('Microsoft.Network/networkSecurityGroups',variables('dataNsgName'))]"
          ],
          "properties": {
             "ipConfigurations": [
                {
                   "name": "ipconfig1",
                   "properties": {
                      "privateIPAllocationMethod": "Static",
                      "privateIPAddress": "[parameters('data1SubnetIP')]",
                      "subnet": {
                         "id": "[variables('subnet3Ref')]"
                      }
                   }
                }
             ],
             "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('dataNsgName'))]"
             },
             "enableAcceleratedNetworking": true,
             "enableIPForwarding": true
          }
       },
       {
          "apiVersion": "2023-06-01",
          "type": "Microsoft.Network/networkInterfaces",
          "name": "[variables('vmNic3Name')]",
          "location": "[parameters('location')]",
          "dependsOn": [
             "[resourceId('Microsoft.Network/virtualNetworks',parameters('virtualNetworkName'))]",
             "[resourceId('Microsoft.Network/networkSecurityGroups',variables('dataNsgName'))]"
          ],
          "properties": {
             "ipConfigurations": [
                {
                   "name": "ipconfig1",
                   "properties": {
                      "privateIPAllocationMethod": "Static",
                      "privateIPAddress": "[parameters('data2SubnetIP')]",
                      "subnet": {
                         "id": "[variables('subnet4Ref')]"
                      }
                   }
                }
             ],
             "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('dataNsgName'))]"
             },
             "enableAcceleratedNetworking": true,
             "enableIPForwarding": true
          }
       },
       {
          "apiVersion": "2023-06-01",
          "type": "Microsoft.Network/networkInterfaces",
          "name": "[variables('vmNic4Name')]",
          "location": "[parameters('location')]",
          "dependsOn": [
             "[resourceId('Microsoft.Network/virtualNetworks',parameters('virtualNetworkName'))]",
             "[resourceId('Microsoft.Network/networkSecurityGroups',variables('dataNsgName'))]"
          ],
          "properties": {
             "ipConfigurations": [
                {
                   "name": "ipconfig1",
                   "properties": {
                      "privateIPAllocationMethod": "Static",
                      "privateIPAddress": "[parameters('data2SubnetIP2')]",
                      "subnet": {
                         "id": "[variables('subnet4Ref')]"
                      }
                   }
                }
             ],
             "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('dataNsgName'))]"
             },
             "enableAcceleratedNetworking": true,
             "enableIPForwarding": true
          }
       },
       {
         "apiVersion": "2023-06-01",
         "type": "Microsoft.Network/networkInterfaces",
         "name": "[variables('vmNic5Name')]",
         "location": "[parameters('location')]",
         "dependsOn": [
            "[resourceId('Microsoft.Network/networkInterfaces',variables('vmNic4Name'))]",
            "[resourceId('Microsoft.Network/virtualNetworks',parameters('virtualNetworkName'))]",
            "[resourceId('Microsoft.Network/networkSecurityGroups',variables('mgtNsgName'))]",
            "[resourceId('Microsoft.Network/publicIPAddresses', variables('hostOutsidePublicIPAddressName'))]"
         ],
         "properties": {
            "ipConfigurations": [
               {
                  "name": "ipconfig1",
                  "properties": {
                     "privateIPAllocationMethod": "Static",
                     "privateIPAddress": "[parameters('hostMgmtSubnetIP')]",
                     "subnet": {
                        "id": "[variables('subnet1Ref')]"
                     },
                     "publicIPAddress": {
                        "id": "[resourceId('Microsoft.Network/publicIPAddresses/', variables('hostOutsidePublicIPAddressName'))]"
                     }
                  }
               }
            ],
            "networkSecurityGroup": {
               "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('mgtNsgName'))]"
            },
            "enableAcceleratedNetworking": true,
            "enableIPForwarding": true
         }
       },
       {
         "apiVersion": "2023-06-01",
         "type": "Microsoft.Network/networkInterfaces",
         "name": "[variables('vmNic6Name')]",
         "location": "[parameters('location')]",
         "dependsOn": [
            "[resourceId('Microsoft.Network/networkInterfaces',variables('vmNic4Name'))]",
            "[resourceId('Microsoft.Network/virtualNetworks',parameters('virtualNetworkName'))]",
            "[resourceId('Microsoft.Network/networkSecurityGroups',variables('dataNsgName'))]"
         ],
         "properties": {
            "ipConfigurations": [
               {
                  "name": "ipconfig1",
                  "properties": {
                     "privateIPAllocationMethod": "Static",
                     "privateIPAddress": "[parameters('data1SubnetIP2')]",
                     "subnet": {
                        "id": "[variables('subnet3Ref')]"
                     }
                  }
               }
            ],
            "networkSecurityGroup": {
               "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('dataNsgName'))]"
            },
            "enableAcceleratedNetworking": true,
            "enableIPForwarding": true
         }
       },
       {
          "apiVersion": "2022-03-01",
          "type": "Microsoft.Compute/virtualMachines",
          "name": "[parameters('vmName')]",
          "location": "[parameters('location')]",
          "plan": {
                "name": "ftdv-azure-byol",
                "product": "cisco-ftdv",
                "publisher": "cisco"
          },
          "dependsOn": [
             "[resourceId('Microsoft.Network/networkInterfaces',variables('vmNic0Name'))]",
             "[resourceId('Microsoft.Network/networkInterfaces',variables('vmNic1Name'))]",
             "[resourceId('Microsoft.Network/networkInterfaces',variables('vmNic2Name'))]",
             "[resourceId('Microsoft.Network/networkInterfaces',variables('vmNic3Name'))]"
          ],
          "properties": {
             "hardwareProfile": {
                "vmSize": "[parameters('vmSize')]"
             },
             "osProfile": {
                "computername": "[parameters('vmName')]",
                "adminUsername": "[parameters('AdminUsername')]",
                "adminPassword": "[parameters('AdminPassword')]",
                "customData": "[base64(parameters('customData'))]"
             },
             "storageProfile": {
               "imageReference": "[variables('imageReference')[parameters('ftdOSVersion')]]",
                "osDisk": {
                  "createOption": "FromImage",
                  "managedDisk": {
                     "storageAccountType": "[variables('osDiskType')]"
                  }
                }
             },
             "networkProfile": {
                "networkInterfaces": [
                   {
                      "properties": {
                         "primary": true
                      },
                      "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('vmNic0Name'))]"
                   },
                   {
                      "properties": {
                         "primary": false
                      },
                      "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('vmNic1Name'))]"
                   },
                   {
                      "properties": {
                         "primary": false
                      },
                      "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('vmNic2Name'))]"
                   },
                   {
                      "properties": {
                         "primary": false
                      },
                      "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('vmNic3Name'))]"
                   }
                ]
             }
          },
          "zones": "[variables('selectedAvailZone')]"
       },
       {
         "apiVersion": "2022-03-01",
         "type": "Microsoft.Compute/virtualMachines",
         "name": "[parameters('insideMachine')]",
         "location": "[parameters('location')]",
         "dependsOn": [
             "[resourceId('Microsoft.Network/networkInterfaces',variables('vmNic0Name'))]",
             "[resourceId('Microsoft.Network/networkInterfaces',variables('vmNic4Name'))]"
          ],
          "properties": {
            "hardwareProfile": {
               "vmSize": "[parameters('vmHostSize')]"
            },
            "osProfile": {
               "computerName": "[parameters('insideMachine')]",
               "adminUsername": "ubuntu-inside",
               "adminPassword": "[parameters('adminPassword')]"
            },
            "storageProfile": {
               "imageReference": "[variables('imageReference')[parameters('ubuntuOSVersion')]]",
               "osDisk": {
                  "createOption": "FromImage",
                  "managedDisk": {
                     "storageAccountType": "[variables('osDiskType')]"
                  }
               }
            },
            "networkProfile": {
              "networkInterfaces": [
               {
                  "properties": {
                     "primary": true
                  },
                  "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('vmNic4Name'))]"
               }
              ]
            }
          },
          "zones": "[variables('selectedAvailZone')]"
       },
       {
         "apiVersion": "2022-03-01",
         "type": "Microsoft.Compute/virtualMachines",
         "name": "[parameters('outsideMachine')]",
         "location": "[parameters('location')]",
         "dependsOn": [
             "[resourceId('Microsoft.Network/networkInterfaces',variables('vmNic0Name'))]",
             "[resourceId('Microsoft.Network/networkInterfaces',variables('vmNic6Name'))]"
          ],
          "properties": {
            "hardwareProfile": {
               "vmSize": "[parameters('vmHostSize')]"
            },
            "osProfile": {
               "computerName": "[parameters('outsideMachine')]",
               "adminUsername": "ubuntu-outside",
               "adminPassword": "[parameters('adminPassword')]"
            },
            "storageProfile": {
               "imageReference": "[variables('imageReference')[parameters('ubuntuOSVersion')]]",
               "osDisk": {
                  "createOption": "FromImage",
                  "managedDisk": {
                     "storageAccountType": "[variables('osDiskType')]"
                  }
               }
            },
            "networkProfile": {
              "networkInterfaces": [
               {
                  "properties": {
                     "primary": true
                  },
                  "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('vmNic5Name'))]"
               },
               {
                  "properties": {
                     "primary": false
                  },
                  "id": "[resourceId('Micrsoft.Network/networkInterfaces', variables('vmNic6Name'))]"
               }
              ]
            }
          },
          "zones": "[variables('selectedAvailZone')]"
       }
    ],
    "outputs": {
      "vmMgmtPublicIP": {
         "type": "string",
         "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', variables('vmMgmtPublicIPAddressName'))).ipAddress]"
      },
      "hostOutsidePublicIP": {
         "type": "string",
         "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', variables('hostOutsidePublicIPAddressName'))).ipAddress]"
      }
   }
}
